# Roblox-Account-Manager

./: .gitignore
.github/workflows/: cpp-build.yml
cpp/: CMakeLists.txt
cpp/_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  ram_tests  ram_tests[1]_include.cmake  ram_tests[1]_tests.cmake  roblox_account_manager
cpp/include/ram/: account.h  cryptography.h  ini_file.h  utilities.h
cpp/src/: account.cpp  cryptography.cpp  ini_file.cpp  main.cpp  utilities.cpp
cpp/tests/: test_account.cpp  test_cryptography.cpp  test_ini_file.cpp  test_utilities.cpp
